gets hello world displaying

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,12 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset='utf-8'>
+		<title></title>
+	</head>
+	<body>
+	<p>Find me in app/views/pages/index.html.erb</p>
+	<%= react_component 'Main' %>
+	</body>
+</html>
 
-<%= react_component 'Main' %>
